# project_2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.multistage  I_want_to_test_that_pre_commit_fails.py  README.md  benchmarkresult.txt  costs.db  demo_ai.py  docker-compose.yml  main.py  monitor_logs.sh  nutrition_cache.json  persistent_cache.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ai/: nutrition.py
ai/providers/: anthropic.py  factory.py  google.py  openai.py
data/: _make_samples.py
docker/: food-analyzer-dashboard.json  food-analyzer.json  grafana-dashboards.yaml  grafana-datasources.yaml  loki-config.yaml  prometheus.yml  promtail-config.yaml
nginx/: nginx.conf
src/: config.py  logging_config.py
src/api/: app.py  models.py
src/cli/: cli.md  cost_report.py  main.py
src/concurrency/: pipeline.py
src/core/: analyzer.py
src/scripts/: benchmark.py
src/services/: ai_service.py  cache_factory.py  failover_nutrition_provider.py  failover_provider.py  http_cache.py  mock_nutrition_provider.py  nutrition_cache.py  openfoodfacts_provider.py  token_rate_limiter.py  vlm_cache.py
src/storage/: database.py
src/telemetry/: __init__.py  cost_meter.py  metrics.py  tracing.py
src/web/: index.html  routes.py
src/web/css/: style.css
src/web/css/sass/: style.css
src/web/htmls/: abautus.html
src/web/templates/: index.html
tests/: conftest.py  test_ai_smoke.py  test_analyzer.py  test_analyzer_async.py  test_api.py  test_benchmark.py  test_cache_factory.py  test_cli.py  test_concurrency.py  test_config.py  test_cost_telemetry.py  test_failover.py  test_http_cache.py  test_openfoodfacts_provider.py  test_services.py  test_storage.py
web/: index.html
