[project]
name = "topic-2-food-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "cachetools>=7.1.2",
    "fastapi[standard]>=0.136.1",
    "google-genai>=2.3.0",
    "numpy>=2.4.5",
    "pre-commit>=4.6.0",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "requests>=2.34.2",
    "requests-cache>=1.3.2",
    "ruff>=0.15.13",
    "tenacity>=9.1.4",
    "ty>=0.0.37",
]
