[project]
name = "topic-2-food-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncpg>=0.31.0",
    "cachetools>=7.1.2",
    "deprecated>=1.3.1",
    "fastapi[standard]>=0.136.1",
    "google-genai>=2.3.0",
    "loguru>=0.7.3",
    "numpy>=2.4.5",
    "openai>=2.37.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-requests>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "pre-commit>=4.6.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "requests>=2.34.2",
    "requests-cache>=1.3.2",
    "ruff>=0.15.13",
    "tenacity>=9.1.4",
    "ty>=0.0.37",
]
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
[tool.mypy]
ignore_missing_imports = true
allow_untyped_decorators = true
exclude = ["src/scripts/", "tests/"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
